RESOLVED FIXED305510
Fixed unretained local variable warnings in WebCore/{ bridge, editing, loader, page }
https://bugs.webkit.org/show_bug.cgi?id=305510
Summary Fixed unretained local variable warnings in WebCore/{ bridge, editing, loader...
Geoffrey Garen
Reported 2026-01-14 14:43:26 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-14 14:43:35 PST
Geoffrey Garen
Comment 2 2026-01-14 14:46:44 PST
EWS
Comment 3 2026-01-16 20:07:03 PST
Committed 305755@main (bde65dfa9341): <https://commits.webkit.org/305755@main> Reviewed commits have been landed. Closing PR #56590 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.