Fixed unretained local variable warnings in WebCore/{ bridge, editing, loader, page } https://bugs.webkit.org/show_bug.cgi?id=305510 rdar://168172951

Reviewed by Ryosuke Niwa and David Kilzer.

Mechanical fixes dictated by the SaferCPP bot.

Canonical link: https://commits.webkit.org/305755@main